--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>htmlspl</title>
+</head>
 <body>
-  <h1>htmlspl</h1>
- 
-  <img src="https://res.cloudinary.com/dxa8r3gf3/image/upload/v1654631510/web/image_processing20210912-8680-fi1df7_lsjjww.gif" />
+    <h1>htmlspl</h1>
+     <img src="https://res.cloudinary.com/dxa8r3gf3/image/upload/v1654631510/web/image_processing20210912-8680-fi1df7_lsjjww.gif" />
 </body>
- 
 </html>
