--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
  
  </head>
  
-<body>
- 
+<body onload="inicio()">
+  <head class="head" id="root">
+    <h1>APP</h1>
+  </head>
+  <div id="box"></div>
   <img src="https://res.cloudinary.com/dxa8r3gf3/image/upload/v1654631510/web/image_processing20210912-8680-fi1df7_lsjjww.gif" />
+  <script src="./js/mian.js"></script>
 </body>
- 
 </html>
