--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
  <head>
  <title> Simple Html</title>
- 
+ <link rel="stylesheet" href="./css/style.css">
  </head>
  
 <body onload="inicio()">
-  <head class="head" id="root">
+  <head class="head" >
     <h1>APP</h1>
   </head>
   <div id="box"></div>
