--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 <style>
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -138,7 +139,7 @@ body {
 	<!-- Collection of nav links, forms, and other content for toggling -->
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<div class="navbar-nav">
-			<a href="#" class="nav-item nav-link">Home</a>
+			<a href="#/" class="nav-item nav-link">Home</a>
 			<a href="#" class="nav-item nav-link">About</a>			
 
 			<a href="#" class="nav-item nav-link active">Pricing</a>
@@ -190,5 +191,12 @@ body {
         </div>
 	</div>
 </nav>
+<main>
+
+  <section id="root">
+
+  </section>
+</main>
+
 </body>
 </html>
